Add fuction both rainbow and default

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
-    
+    <div id="button">
+    <button id="inputNum">Number of Grids</button>
+    <button id="rainbow">Rainbow</button>
+    </div>
 </body>
 </html>
